# rust-template

./: CHANGELOG.md  Cargo.toml  README.md  devenv.nix
.github/workflows/: ci.yml
