[package]
name = "my-project"
version = "0.1.0"
edition = "2024"
authors = ["i-am-logger"]
description = "A Rust CLI project"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/i-am-logger/my-project"
keywords = []
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"
